design the two sections of the mobile version with flexbox

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,43 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
-        <h1>Zewdie Habtie</h1>
-        <img src="images/Union.png" alt="Union Image">
+        <ul>
+            <li class="list-item">
+                <h1>My Logo</h1>
+            </li>
+            <li class="list-item"><img src="images/Union.png" alt="mobile navigation"></li>
+        </ul>
     </nav>
+    <section class="main_content">
+        <h1 class="username">I’m Zewdie Glad to see you!</h1>
+        <p class="introduction">I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience!
+            If you like what you see and have a project you need coded,
+            don’t hestiate to contact me.</p>
+    </section>
+    <section class="social_links">
+        <h1 id="lets_connect">LET'S CONNECT</h1>
+        <article class="links">
+            <a href="#">
+                <img src="/images/twitter.png" alt="">
+            </a>
+
+            <a href="#">
+                <img src="/images/Linkedin.png" alt="">
+            </a>
+
+            <a href="#">
+                <img src="/images/Vector@2x.png" alt="">
+            </a>
+
+            <a href="#">
+                <img src="/images/crossfinger.png" alt="">
+            </a>
+        </article>
+    </section>
 </body>
+
 </html>
