--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -18,33 +19,35 @@
             <li class="list-item"><img src="images/Union.png" alt="mobile navigation"></li>
         </ul>
     </nav>
-    <section class="main_content">
-        <h1 class="username">I’m Zewdie Glad to see you!</h1>
-        <p class="introduction">I’m a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience!
-            If you like what you see and have a project you need coded,
-            don’t hestiate to contact me.</p>
-    </section>
-    <section class="social_links">
-        <h1 id="lets_connect">LET'S CONNECT</h1>
-        <article class="links">
-            <a href="#">
-                <img src="/images/twitter.png" alt="">
-            </a>
+    <div class="headline">
+        <section class="main_content">
+            <h1 class="username">I’m Zewdie <br>Glad to see you!</h1>
+            <p class="introduction">I’m a software developer! I can help you build a product ,
+                feature or website Look through some of my work and experience!
+                If you like what you see and have a project you need coded,
+                don’t hestiate to contact me.</p>
+        </section>
+        <section class="social_links">
+            <h1 id="lets_connect">LET'S CONNECT</h1>
+            <article class="links">
+                <a href="#">
+                    <img src="/images/twitter.png" alt="">
+                </a>
 
-            <a href="#">
-                <img src="/images/Linkedin.png" alt="">
-            </a>
+                <a href="#">
+                    <img src="/images/Linkedin.png" alt="">
+                </a>
 
-            <a href="#">
-                <img src="/images/Vector@2x.png" alt="">
-            </a>
+                <a href="#">
+                    <img src="/images/Vector@2x.png" alt="">
+                </a>
 
-            <a href="#">
-                <img src="/images/crossfinger.png" alt="">
-            </a>
-        </article>
-    </section>
+                <a href="#">
+                    <img src="/images/crossfinger.png" alt="">
+                </a>
+            </article>
+        </section>
+    </div>
 </body>
 
 </html>
