--- a/index.html
+++ b/index.html
@@ -11,43 +11,54 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li class="list-item">
-                <h1>My Logo</h1>
-            </li>
-            <li class="list-item"><img src="images/Union.png" alt="mobile navigation"></li>
-        </ul>
-    </nav>
-    <div class="headline">
-        <section class="main_content">
+    <header>
+        <nav>
+            <span><a href="#">My Logo</a></span>
+            <span><a href="#"><img src="images/Union.png" alt="mobile navigation"></a></span>
+        </nav>
+    </header>
+    <section class="headline">
+        <div class="main_content">
             <h1 class="username">I’m Zewdie <br>Glad to see you!</h1>
             <p class="introduction">I’m a software developer! I can help you build a product ,
                 feature or website Look through some of my work and experience!
                 If you like what you see and have a project you need coded,
                 don’t hestiate to contact me.</p>
-        </section>
-        <section class="social_links">
+        </div>
+        <div class="social_links">
             <h1 id="lets_connect">LET'S CONNECT</h1>
-            <article class="links">
-                <a href="#">
-                    <img src="/images/twitter.png" alt="">
-                </a>
+            <ul class="links">
+                <li>
+                    <a href="#">
+                        <img src="/images/twitter.png" alt="">
+                    </a>
+                </li>
 
-                <a href="#">
-                    <img src="/images/Linkedin.png" alt="">
-                </a>
+                <li>
+                    <a href="#">
+                        <img src="/images/Linkedin.png" alt="">
+                    </a>
+                </li>
 
-                <a href="#">
-                    <img src="/images/Vector@2x.png" alt="">
-                </a>
+                <li>
+                    <a href="#">
+                        <img src="/images/Vector@2x.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="/images/Github.png" alt="">
+                    </a>
+                </li>
 
-                <a href="#">
-                    <img src="/images/crossfinger.png" alt="">
-                </a>
-            </article>
-        </section>
-    </div>
+                <li>
+                    <a href="#">
+                        <img src="/images/crossfinger.png" alt="">
+                    </a>
+                </li>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
