--- a/index.html
+++ b/index.html
@@ -59,6 +59,164 @@
         </div>
         </div>
     </section>
+    <!-- end of headline -->
+    <section class="works">
+        <div class="card">
+            <div class="snapshoot_wapper">
+                <img class="snapshoot" src="images/Snapshoot Portfolio.png" alt="">
+            </div>
+            <div class="left_block">
+                <div class="left_block_title">
+                    <div class="projec_title">Tonic</div>
+                    <div class="frame">
+                        <img src="images/Frame 2.png" alt="">
+                    </div>
+                </div>
+                <p>
+                    A daily selection of privately personalized reads; no accounts or sign-ups required.
+                </p>
+                <ul class="tags">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javaScript</li>
+                </ul>
+                <button class="action">See Project</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="snapshoot_wapper">
+                <img class="snapshoot" src="images/Snapshoot Portfolio (1).png" alt="">
+            </div>
+            <div class="left_block">
+                <div class="left_block_title">
+                    <div class="projec_title">Multi-Post <br>Stories</div>
+                    <div class="frame">
+                        <img src="images/Frame 2.png" alt="">
+                    </div>
+                </div>
+                <p>
+                    A daily selection of privately personalized reads; no accounts or sign-ups required.
+                </p>
+                <ul class="tags">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javaScript</li>
+                </ul>
+                <button class="action">See Project</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="snapshoot_wapper">
+                <img class="snapshoot" src="images/Snapshoot Portfolio (2).png" alt="">
+            </div>
+            <div class="left_block">
+                <div class="left_block_title">
+                    <div class="projec_title">Tonic</div>
+                    <div class="frame">
+                        <img src="images/Frame 2.png" alt="">
+                    </div>
+                </div>
+                <p>
+                    A daily selection of privately personalized reads; no accounts or sign-ups required.
+                </p>
+                <ul class="tags">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javaScript</li>
+                </ul>
+                <button class="action">See Project</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="snapshoot_wapper">
+                <img class="snapshoot" src="images/Snapshoot Portfolio (3).png" alt="">
+            </div>
+            <div class="left_block">
+                <div class="left_block_title">
+                    <h1 class="projec_title">Multi-Post <br>Stories</h1>
+                    <div class="frame">
+                        <img src="images/Frame 2.png" alt="">
+                    </div>
+                </div>
+                <p>
+                    A daily selection of privately personalized reads; no accounts or sign-ups required.
+                </p>
+                <ul class="tags">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javaScript</li>
+                </ul>
+                <button class="action">See Project</button>
+            </div>
+        </div>
+    </section>
+    <!-- end of works section -->
+    <section class="about_myself">
+        <div class="top">
+            <h1>About<br> Myself</h1>
+            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of
+                my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
+                contact me.</p>
+            <div class="social_links">
+                <h1 id="lets_connect">LET'S CONNECT</h1>
+                <ul class="links">
+                    <li>
+                        <a href="#">
+                            <img src="/images/twitter.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="/images/Linkedin.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="/images/Vector@2x.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="/images/Github.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="/images/crossfinger.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <button class="action">Get my resume</button>
+        </div>
+        <div class="skill_list">
+            <ul>
+                <li>
+                    <div class="frame">
+                        <h4>Languages</h4> <img class="arrow" src="images/Disabled.png" alt="">
+                    </div>
+                    <ul class="language_wrapper">
+                        <li class="language"><img src="images/Ellipse_js.png" alt="">JavaScript</li>
+                        <li class="language"><img src="images/Ellipse_html.png" alt="">HTML</li>
+                        <li class="language"><img src="images/Ellipse_css.png" alt="">CSS</li>
+                    </ul>
+                </li>
+                <li><img class="separator"img src="images/Separator Bottom.png" alt=""></li>
+                <li>
+                    <div class="frame"><h4>Frameworks</h4> <img class="arrow" src="images/right.png" alt="">
+                    </div>
+                </li>
+                <li><img class="separator"img src="images/Separator Bottom.png" alt=""></li>
+                <li>
+                    <div class="frame"><h4>Skills</h4><img class="arrow" src="images/right.png" alt=""></div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!-- end of about section -->
 </body>
 
 </html>
