Add link to social media icons

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <h1 id="lets_connect">LET'S CONNECT</h1>
             <ul class="links">
                 <li>
-                    <a href="#">
+                    <a href="https://twitter.com/HabtieZewdie">
                         <img src="/images/twitter.png" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/zewdie-habtie-sisay-947153172/">
                         <img src="/images/Linkedin.png" alt="">
                     </a>
                 </li>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/ZewdieMc">
                         <img src="/images/Github.png" alt="">
                     </a>
                 </li>
