Fix GitHub pages issues

--- a/index.html
+++ b/index.html
@@ -30,30 +30,30 @@
             <ul class="links">
                 <li>
                     <a href="https://twitter.com/HabtieZewdie">
-                        <img src="/images/twitter.png" alt="">
+                        <img src="./images/twitter.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.linkedin.com/in/zewdie-habtie-sisay-947153172/">
-                        <img src="/images/Linkedin.png" alt="">
+                        <img src="./images/Linkedin.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="/images/Vector@2x.png" alt="">
+                        <img src="./images/Vector@2x.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/ZewdieMc">
-                        <img src="/images/Github.png" alt="">
+                        <img src="./images/Github.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="/images/crossfinger.png" alt="">
+                        <img src="./images/crossfinger.png" alt="">
                     </a>
                 </li>
         </div>
