--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
-                <button class="action">See Project</button>
+                <button type="button" class="action">See Project</button>
             </div>
         </div>
         <div class="card">
@@ -105,7 +105,7 @@
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
-                <button class="action">See Project</button>
+                <button type="button" class="action">See Project</button>
             </div>
         </div>
         <div class="card">
@@ -127,7 +127,7 @@
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
-                <button class="action">See Project</button>
+                <button type="button"class="action">See Project</button>
             </div>
         </div>
         <div class="card">
@@ -149,7 +149,7 @@
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
-                <button class="action">See Project</button>
+                <button type="button" class="action">See Project</button>
             </div>
         </div>
     </section>
@@ -195,7 +195,7 @@
                     </li>
                 </ul>
             </div>
-            <button class="action">Get my resume</button>
+            <button type="button"class="action">Get my resume</button>
         </div>
         <div class="skill_list">
             <ul>
@@ -238,13 +238,13 @@
             <form action="https://formspree.io/f/xbjeloeq" method="post">
                 <ul>
                     <li>
-                      <input name="username" type="text" placeholder="Your name" maxlength="30">
+                      <input name="username" type="text" placeholder="Your name" maxlength="30"required>
                     </li>
                     <li>
-                      <input name="email" type="email" placeholder="youremail@example.com">
+                      <input name="email" type="email" placeholder="youremail@example.com" required>
                     </li>
                     <li>
-                      <textarea name="message" id="message" placeholder="Write your message here" maxlength="500"></textarea>
+                      <textarea name="message" id="message" placeholder="Write your message here" maxlength="500" required></textarea>
                     </li>
                 </ul>
                 <input type="submit" value="Get It Touch">
@@ -253,5 +253,4 @@
     </section>
     <!-- end of contact form -->
 </body>
-
 </html>
