Add desktop version for the header, headline, works, about me, and contact sections

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <span><a href="#">My Logo</a></span>
         <nav>
             <span><a href="#"><img src="images/Union.png" alt="mobile navigation"></a></span>
+            <ul>
+                <li><a href="./index.html">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <!-- headeline -->
@@ -25,8 +30,6 @@
                 feature or website Look through some of my work and experience!
                 If you like what you see and have a project you need coded,
                 don’t hestiate to contact me.</p>
-        </div>
-        <div class="social_links">
             <h1 id="lets_connect">LET'S CONNECT</h1>
             <ul class="links">
                 <li>
@@ -57,6 +60,7 @@
                         <img src="./images/crossfinger.png" alt="">
                     </a>
                 </li>
+            </ul>
         </div>
         </div>
     </section>
@@ -127,7 +131,7 @@
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
-                <button type="button"class="action">See Project</button>
+                <button type="button" class="action">See Project</button>
             </div>
         </div>
         <div class="card">
@@ -162,40 +166,38 @@
             <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of
                 my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
                 contact me.</p>
-            <div class="social_links">
-                <h1 id="lets_connect">LET'S CONNECT</h1>
-                <ul class="links">
-                    <li>
-                        <a href="#">
-                            <img src="/images/twitter.png" alt="">
-                        </a>
-                    </li>
+            <h1 id="lets_connect">LET'S CONNECT</h1>
+            <ul class="links">
+                <li>
+                    <a href="#">
+                        <img src="/images/twitter.png" alt="">
+                    </a>
+                </li>
 
-                    <li>
-                        <a href="#">
-                            <img src="/images/Linkedin.png" alt="">
-                        </a>
-                    </li>
+                <li>
+                    <a href="#">
+                        <img src="/images/Linkedin.png" alt="">
+                    </a>
+                </li>
 
-                    <li>
-                        <a href="#">
-                            <img src="/images/Vector@2x.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="/images/Github.png" alt="">
-                        </a>
-                    </li>
+                <li>
+                    <a href="#">
+                        <img src="/images/Vector@2x.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="/images/Github.png" alt="">
+                    </a>
+                </li>
 
-                    <li>
-                        <a href="#">
-                            <img src="/images/crossfinger.png" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <button type="button"class="action">Get my resume</button>
+                <li>
+                    <a href="#">
+                        <img src="/images/crossfinger.png" alt="">
+                    </a>
+                </li>
+            </ul>
+            <button type="button" class="action">Get my resume</button>
         </div>
         <div class="skill_list">
             <ul>
@@ -229,28 +231,25 @@
     <!-- contact form -->
     <section class="contact_form">
         <div class="contact_wrapper">
-            <h1>Contact me</h1>
-            <p>
-                If you have an application you are interested in developing,
-                a feature that you need built or a project that needs coding.
-                I’d love to help with it
-            </p>
-            <form action="https://formspree.io/f/xbjeloeq" method="post">
-                <ul>
-                    <li>
-                      <input name="username" type="text" placeholder="Your name" maxlength="30"required>
-                    </li>
-                    <li>
-                      <input name="email" type="email" placeholder="youremail@example.com" required>
-                    </li>
-                    <li>
-                      <textarea name="message" id="message" placeholder="Write your message here" maxlength="500" required></textarea>
-                    </li>
-                </ul>
-                <input type="submit" value="Get It Touch">
-            </form>
+            <div class="form_wrapper">
+                <h1>Contact me</h1>
+                <p>
+                    If you have an application you are interested in developing,
+                    a feature that you need built or a project that needs coding.
+                    I’d love to help with it
+                </p>
+                <form action="https://formspree.io/f/xbjeloeq" method="post">
+                    <input name="username" type="text" placeholder="Your name" maxlength="30" required>
+                    <input name="email" type="email" placeholder="youremail@example.com" required>
+                    <textarea name="message" id="message" placeholder="Write your message here" maxlength="500"
+                        required></textarea>
+                    <input type="submit" value="Get It Touch">
+                </form>
+
+            </div>
         </div>
     </section>
     <!-- end of contact form -->
 </body>
+
 </html>
