Finish the desktop version

--- a/index.html
+++ b/index.html
@@ -70,13 +70,21 @@
     <section class="works">
         <div class="card">
             <div class="snapshoot_wapper">
-                <img class="snapshoot" src="images/Snapshoot Portfolio.png" alt="">
+                <img class="snapshoot mobile" src="./images/Snapshootmbl1.png" alt="">
+                <img class="snapshoot desktop" src="./images/Snapshootdsktp1.png" alt="">
             </div>
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title">Tonic</div>
+                    <div class="projec_title mobile">Tonic</div>
+                    <div class="projec_title desktop">Tonic</div>
                     <div class="frame">
-                        <img src="images/Frame 2.png" alt="">
+                        <div class="frame">
+                            <div class="client">CANOPY</div>
+                            <img class="counter" src="./images/Counter.png" alt="">
+                            <div class="role">Back End Dev</div>
+                            <img class="counter" src="./images/Counter.png" alt="">
+                            <div class="year">2015</div>
+                        </div>
                     </div>
                 </div>
                 <p>
@@ -92,13 +100,20 @@
         </div>
         <div class="card">
             <div class="snapshoot_wapper">
-                <img class="snapshoot" src="images/Snapshoot Portfolio (1).png" alt="">
+                <img class="snapshoot mobile" src="images/Snapshootmbl2.png" alt="">
+                <img class="snapshoot desktop" src="images/Snapshootdsktp2.png" alt="">
             </div>
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title">Multi-Post <br>Stories</div>
-                    <div class="frame">
-                        <img src="images/Frame 2.png" alt="">
+                    <div class="projec_title mobile">Multi-Post Stories</div>
+                    <div class="projec_title desktop">Multi-Post Stories</div>
+                        <div class="frame">
+                            <div class="client mobile">CANOPY</div>
+                            <div class="client desktop">FACEBOOK</div>
+                            <img class="counter" src="./images/Counter.png" alt="">
+                            <div class="role">Back End Dev</div>
+                            <img class="counter" src="./images/Counter.png" alt="">
+                            <div class="year">2015</div>
                     </div>
                 </div>
                 <p>
@@ -106,6 +121,7 @@
                 </p>
                 <ul class="tags">
                     <li>html</li>
+                    <li class="desktop">Ruby on rails</li>
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
@@ -114,13 +130,20 @@
         </div>
         <div class="card">
             <div class="snapshoot_wapper">
-                <img class="snapshoot" src="images/Snapshoot Portfolio (2).png" alt="">
+                <img class="snapshoot mobile" src="./images/Snapshootmbl3.png" alt="">
+                <img class="snapshoot desktop" src="./images/Snapshootdsktp3.png" alt="">
             </div>
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title">Tonic</div>
+                    <div class="projec_title mobile">Tonic</div>
+                    <div class="projec_title desktop">Facebook 360</div>
                     <div class="frame">
-                        <img src="images/Frame 2.png" alt="">
+                        <div class="client mobile">CANOPY</div>
+                        <div class="client desktop">FACEBOOK</div>
+                        <img class="counter" src="./images/Counter.png" alt="">
+                        <div class="role">Back End Dev</div>
+                        <img class="counter" src="./images/Counter.png" alt="">
+                        <div class="year">2015</div>
                     </div>
                 </div>
                 <p>
@@ -128,6 +151,7 @@
                 </p>
                 <ul class="tags">
                     <li>html</li>
+                    <li class="desktop">Ruby on rails</li>
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
@@ -136,13 +160,22 @@
         </div>
         <div class="card">
             <div class="snapshoot_wapper">
-                <img class="snapshoot" src="images/Snapshoot Portfolio (3).png" alt="">
+                <img class="snapshoot mobile" src="images/Snapshootmbl4.png" alt="">
+                <img class="snapshoot desktop" src="images/Snapshootdsktp4.png" alt="">
             </div>
             <div class="left_block">
                 <div class="left_block_title">
-                    <h1 class="projec_title">Multi-Post <br>Stories</h1>
+                    <h1 class="projec_title mobile">Multi-Post Stories</h1>
+                    <h1 class="projec_title desktop">Uber Navigation</h1>
                     <div class="frame">
-                        <img src="images/Frame 2.png" alt="">
+                        <div class="client mobile">CANOPY</div>
+                        <div class="client desktop">Uber</div>
+                        <img class="counter" src="./images/Counter.png" alt="">
+                        <div class="role mobile">Back End Dev</div>
+                        <div class="role desktop">Lead Developer</div>
+                        <img class="counter" src="./images/Counter.png" alt="">
+                        <div class="year mobile">2015</div>
+                        <div class="year desktop">2018</div>
                     </div>
                 </div>
                 <p>
@@ -150,6 +183,7 @@
                 </p>
                 <ul class="tags">
                     <li>html</li>
+                    <li class="desktop">Ruby on rails</li>
                     <li>css</li>
                     <li>javaScript</li>
                 </ul>
@@ -170,57 +204,57 @@
             <ul class="links">
                 <li>
                     <a href="#">
-                        <img src="/images/twitter.png" alt="">
+                        <img src="./images/twitter.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="/images/Linkedin.png" alt="">
+                        <img src="./images/Linkedin.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="/images/Vector@2x.png" alt="">
+                        <img src="./images/Vector@2x.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/images/Github.png" alt="">
+                        <img src="./images/Github.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="/images/crossfinger.png" alt="">
+                        <img src="./images/crossfinger.png" alt="">
                     </a>
                 </li>
             </ul>
-            <button type="button" class="action">Get my resume</button>
+            <button type="button" class="action">Get My Resume</button>
         </div>
         <div class="skill_list">
             <ul>
                 <li>
                     <div class="frame">
-                        <h4>Languages</h4> <img class="arrow" src="images/Disabled.png" alt="">
+                        <h4>Languages</h4> <img class="arrow" src="./images/Disabled.png" alt="">
                     </div>
                     <ul class="language_wrapper">
-                        <li class="language"><img src="images/Ellipse_js.png" alt="">JavaScript</li>
-                        <li class="language"><img src="images/Ellipse_html.png" alt="">HTML</li>
-                        <li class="language"><img src="images/Ellipse_css.png" alt="">CSS</li>
+                        <li class="language"><img src="./images/Ellipse_js.png" alt="">JavaScript</li>
+                        <li class="language"><img src="./images/Ellipse_html.png" alt="">HTML</li>
+                        <li class="language"><img src="./images/Ellipse_css.png" alt="">CSS</li>
                     </ul>
                 </li>
-                <li><img class="separator" img src="images/Separator Bottom.png" alt=""></li>
+                <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
                 <li>
                     <div class="frame">
-                        <h4>Frameworks</h4> <img class="arrow" src="images/right.png" alt="">
+                        <h4>Frameworks</h4> <img class="arrow" src="./images/right.png" alt="">
                     </div>
                 </li>
-                <li><img class="separator" img src="images/Separator Bottom.png" alt=""></li>
+                <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
                 <li>
                     <div class="frame">
-                        <h4>Skills</h4><img class="arrow" src="images/right.png" alt="">
+                        <h4>Skills</h4><img class="arrow" src="./images/right.png" alt="">
                     </div>
                 </li>
             </ul>
