Modify card -image sizes and the left_block of the card

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta name="description" content="This is my portfolio website.">
+    <title>Zewdie's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./images/cropped-ZD-icon.png">
 </head>
 
 <body>
     <header>
-        <span><a href="#">My Logo</a></span>
+        <a href="./index.html"><img src="./images/cropped-ZD-icon.png" alt="Logo"></a>
         <nav>
             <span><a href="#"><img src="images/Union.png" alt="mobile navigation"></a></span>
             <ul>
@@ -30,34 +32,34 @@
                 feature or website Look through some of my work and experience!
                 If you like what you see and have a project you need coded,
                 don’t hestiate to contact me.</p>
-            <h1 id="lets_connect">LET'S CONNECT</h1>
+            <h2 id="lets_connect">LET'S CONNECT</h2>
             <ul class="links">
                 <li>
                     <a href="https://twitter.com/HabtieZewdie">
-                        <img src="./images/twitter.png" alt="">
+                        <img src="./images/twitter.png" alt="twitter icon">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.linkedin.com/in/zewdie-habtie-sisay-947153172/">
-                        <img src="./images/Linkedin.png" alt="">
+                        <img src="./images/Linkedin.png" alt="linkedin icon">
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <img src="./images/Vector@2x.png" alt="">
+                        <img src="./images/Vector@2x.png" alt="meta Icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/ZewdieMc">
-                        <img src="./images/Github.png" alt="">
+                        <img src="./images/Github.png" alt="cross finger icon">
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
-                        <img src="./images/crossfinger.png" alt="">
+                    <a href="https://zewdiemc.github.io/Portfolio/">
+                        <img src="./images/crossfinger.png" alt="peace Icon">
                     </a>
                 </li>
             </ul>
@@ -69,19 +71,17 @@
     <!-- works -->
     <section id="portfolio_section"class="works">
         <div class="card">
-            <div class="snapshoot_wapper">
-                <img class="snapshoot mobile" src="./images/Snapshootmbl1.png" alt="">
-                <img class="snapshoot desktop" src="./images/Snapshootdsktp1.png" alt="">
-            </div>
+                <img class="snapshoot mobile" src="./images/Snapshootmbl1.png" alt="background image for mobile">
+                <img class="snapshoot desktop" src="./images/Snapshootdsktp1.png" alt="background image for desktop">
             <div class="left_block">
                 <div class="left_block_title">
                     <div class="projec_title mobile">Tonic</div>
                     <div class="projec_title desktop">Tonic</div>
                         <div class="frame">
                             <div class="client">CANOPY</div>
-                            <img class="counter" src="./images/Counter.png" alt="">
+                            <img class="counter" src="./images/Counter.png" alt="work role">
                             <div class="role">Back End Dev</div>
-                            <img class="counter" src="./images/Counter.png" alt="">
+                            <img class="counter" src="./images/Counter.png" alt="work role">
                             <div class="year">2015</div>
                         </div>
                 </div>
@@ -97,20 +97,18 @@
             </div>
         </div>
         <div class="card">
-            <div class="snapshoot_wapper">
-                <img class="snapshoot mobile" src="images/Snapshootmbl2.png" alt="">
-                <img class="snapshoot desktop" src="images/Snapshootdsktp2.png" alt="">
-            </div>
+                <img class="snapshoot mobile" src="images/Snapshootmbl2.png" alt=" background image">
+                <img class="snapshoot desktop" src="images/Snapshootdsktp2.png" alt=" background image">
             <div class="left_block">
                 <div class="left_block_title">
                     <div class="projec_title ">Multi-Post Stories</div>
                         <div class="frame">
                             <div class="client mobile">CANOPY</div>
                             <div class="client desktop">FACEBOOK</div>
-                            <img class="counter" src="./images/Counter.png" alt="">
+                            <img class="counter" src="./images/Counter.png" alt="work role">
                             <div class="role mobile">Back End Dev</div>
                             <div class="role desktop">Full Stack Dev</div>
-                            <img class="counter" src="./images/Counter.png" alt="">
+                            <img class="counter" src="./images/Counter.png" alt="work role">
                             <div class="year">2015</div>
                     </div>
                 </div>
@@ -132,10 +130,8 @@
             </div>
         </div>
         <div class="card">
-            <div class="snapshoot_wapper">
-                <img class="snapshoot mobile" src="./images/Snapshootmbl3.png" alt="">
-                <img class="snapshoot desktop" src="./images/Snapshootdsktp3.png" alt="">
-            </div>
+                <img class="snapshoot mobile" src="./images/Snapshootmbl3.png" alt=" card image">
+                <img class="snapshoot desktop" src="./images/Snapshootdsktp3.png" alt=" card image">
             <div class="left_block">
                 <div class="left_block_title">
                     <div class="projec_title mobile">Tonic</div>
@@ -143,10 +139,10 @@
                     <div class="frame">
                         <div class="client mobile">CANOPY</div>
                         <div class="client desktop">FACEBOOK</div>
-                        <img class="counter" src="./images/Counter.png" alt="">
+                        <img class="counter" src="./images/Counter.png" alt="work role">
                         <div class="role mobile">Back End Dev</div>
                         <div class="role desktop">Full Stack Dev</div>
-                        <img class="counter" src="./images/Counter.png" alt="">
+                        <img class="counter" src="./images/Counter.png" alt="work role">
                         <div class="year">2015</div>
                     </div>
                 </div>
@@ -167,10 +163,8 @@
             </div>
         </div>
         <div class="card">
-            <div class="snapshoot_wapper">
-                <img class="snapshoot mobile" src="images/Snapshootmbl4.png" alt="">
-                <img class="snapshoot desktop" src="images/Snapshootdsktp4.png" alt="">
-            </div>
+                <img class="snapshoot mobile" src="images/Snapshootmbl4.png" alt="card image">
+                <img class="snapshoot desktop" src="images/Snapshootdsktp4.png" alt="card image">
             <div class="left_block">
                 <div class="left_block_title">
                     <h1 class="projec_title mobile">Multi-Post Stories</h1>
@@ -178,10 +172,10 @@
                     <div class="frame">
                         <div class="client mobile">CANOPY</div>
                         <div class="client desktop">Uber</div>
-                        <img class="counter" src="./images/Counter.png" alt="">
+                        <img class="counter" src="./images/Counter.png" alt="work role">
                         <div class="role mobile">Back End Dev</div>
                         <div class="role desktop">Lead Developer</div>
-                        <img class="counter" src="./images/Counter.png" alt="">
+                        <img class="counter" src="./images/Counter.png" alt="work role">
                         <div class="year mobile">2015</div>
                         <div class="year desktop">2018</div>
                     </div>
@@ -215,31 +209,31 @@
             <h1 id="lets_connect">LET'S CONNECT</h1>
             <ul class="links">
                 <li>
-                    <a href="#">
-                        <img src="./images/twitter.png" alt="">
+                    <a href="#"aria-label="Go to my twitter account">
+                        <img src="./images/twitter.png" alt="twitter icon">
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
-                        <img src="./images/Linkedin.png" alt="">
+                    <a href="#" aria-label="Go to my Linkdin Account">
+                        <img src="./images/Linkedin.png" alt="linkdedin icon">
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
-                        <img src="./images/Vector@2x.png" alt="">
+                    <a href="#" aria-label="Go to my metat account">
+                        <img src="./images/Vector@2x.png" alt="meta icon">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="./images/Github.png" alt="">
+                    <a href="https://github.com/ZewdieMc" aria-balel="go to my GitHub Account">
+                        <img src="./images/Github.png" alt="GitHub icon">
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
-                        <img src="./images/crossfinger.png" alt="">
+                    <a href="https://github.com/ZewdieMc" aria-label="Go to my portfolio">
+                        <img src="./images/crossfinger.png" alt="Cross finger icon">
                     </a>
                 </li>
             </ul>
@@ -278,20 +272,22 @@
     <section id="contact_section"class="contact_form">
         <div class="contact_wrapper">
             <div class="form_wrapper">
-                <h1>Contact me</h1>
+                <h2>Contact me</h2>
                 <p>
                     If you have an application you are interested in developing,
                     a feature that you need built or a project that needs coding.
                     I’d love to help with it.
                 </p>
                 <form action="https://formspree.io/f/xbjeloeq" method="post">
-                    <input name="username" type="text" placeholder="Your name" maxlength="30" required>
-                    <input name="email" type="email" placeholder="youremail@example.com" required>
+                    <label for="username"></label>
+                    <input id="username"name="username" type="text" placeholder="Your name" maxlength="30" required>
+                    <label for="email"></label>
+                    <input id="email"name="email" type="email" placeholder="youremail@example.com" required>
+                    <label for="message"></label>
                     <textarea name="message" id="message" placeholder="Write your message here" maxlength="500"
                         required></textarea>
                     <input type="submit" value="Get It Touch">
                 </form>
-
             </div>
         </div>
     </section>
